tests/sksl/errors/ArraySplitDimensionsInFuncDecl.glsl
### Compilation failed:

error: 1: multi-dimensional arrays are not supported
void func(float[2] x[2]) {}
          ^^^^^^^^^^^^^
1 error
